--- a/src/css/_components/_base.scss
+++ b/src/css/_components/_base.scss
@@ -59,3 +59,7 @@ img {
 .hidden {
 	display: none;
 }
+
+section {
+	overflow-x: hidden;
+}
